# CCO

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  manifest.json
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml  labels.yml
.github/ISSUE_TEMPLATE/: strategy-proposal.md
.github/workflows/: eval-comment.yml  eval.yml  gpu-eval.yml  gpu-queue.yml  labeler.yml  pr-precheck.yml
bench/: README.md  bench_attention.cpp  bench_compute.cpp  bench_pipeline.cpp  bench_transform.cpp  shapes.yaml
bench/scripts/: README.md  _common.sh  accuracy.sh  bench.sh
docs/: contributing.md  evaluation.md  gpu-runner-setup.md  overview.md  transform-ladder.md
eval/: README.md  compare_versions.py  eval.py  run_eval.py  run_eval_gpu.py  score.py  thresholds.yaml
eval/baselines/: 0.0.0.json
examples/: compare_versions.cpp  run_transform_v00.cpp
kernels/: CMakeLists.txt  README.md
kernels/include/cco/: attention.h  compute.h  kernel_common.h  transform.h  types.h
kernels/src/attention/: attention.cu  pv_matmul.cu  qk_matmul.cu  softmax.cu
kernels/src/common/: device.cu  memory.cu  timing.cu  utils.cpp
kernels/src/compute/: gemm.cu  gemv.cu
kernels/src/transform/: 00_baseline.cu  registry.cpp
runtime/: CMakeLists.txt  README.md
runtime/include/cco/: metrics.h  pipeline.h  reference.h
runtime/src/: dispatch.cpp
runtime/src/pipeline/: pipeline.cpp
runtime/src/reference/: attention_cpu.cpp  compute_cpu.cpp  reconstruct_cpu.cpp  transform_cpu.cpp
scripts/: bench.sh  build.sh  eval.sh  eval_gpu.sh  setup_gpu_runner.sh
tests/: test_attention.cpp  test_compute.cpp  test_pipeline.cpp  test_reconstruct.cpp  test_transform.cpp
